--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "react-chartjs-2": "^2.11.1",
         "react-redux": "^7.2.2",
         "react-router": "^5.2.0",
+        "react-router-dom": "^5.2.0",
         "react-to-print": "^2.11.0",
         "redux": "^4.0.5",
         "router": "^1.3.5"
