add a datepicker and fix the bugs related to the analytcs comming from the backendd

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "editor.fontFamily": "\"JetBrains Mono\"",
-    "files.autoSave": "onWindowChange"
+    "files.autoSave": "onWindowChange",
+    "editor.formatOnSave": true
 }
