--- a/package.json
+++ b/package.json
@@ -25,15 +25,25 @@
         "sass-loader": "^8.0.0"
     },
     "dependencies": {
+        "@material-ui/core": "^4.11.1",
         "chart.js": "^2.9.4",
+        "contentful": "^7.15.0",
+        "date-fns": "^2.16.1",
+        "framer-motion": "^2.9.5",
+        "moment": "^2.29.1",
         "react-bootstrap": "^1.4.0",
         "react-chartjs-2": "^2.11.1",
         "react-charts": "^2.0.0-beta.7",
+        "react-date-range": "^1.1.3",
+        "react-dates": "^21.8.0",
+        "react-full-screen": "^0.3.1",
+        "react-google-charts": "^3.0.15",
         "react-loading": "^2.0.3",
         "react-redux": "^7.2.2",
         "react-router": "^5.2.0",
         "react-router-dom": "^5.2.0",
         "react-to-print": "^2.11.0",
+        "react-tooltip": "^4.2.11",
         "redux": "^4.0.5",
         "router": "^1.3.5"
     }
