--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
         "react-dates": "^21.8.0",
         "react-full-screen": "^0.3.1",
         "react-google-charts": "^3.0.15",
+        "react-input-range": "^1.3.0",
         "react-loading": "^2.0.3",
         "react-redux": "^7.2.2",
         "react-router": "^5.2.0",
